--- a/molecules/participants_list.html
+++ b/molecules/participants_list.html
@@ -11,7 +11,7 @@
   <!-- Global Site Tag (gtag.js) - Google Analytics -->
 </head>
 <body>
-
+<a href="../index.html">Retour à l'index</a>
 
 
   <main role="main" class="container">
