--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
 
     <h1>Voici les liens vers les différents molécules :</h1>
     <ul>
-      <li><a href="../molecules/nav.html">Navbar</a></li>
-      <li><a href="../molecules/navconnected.html">Navbar connecté</a></li>
-      <li><a href="../molecules/inscription.html">Inscription</a></li>
-      <li><a href="../molecules/petite_banniere">Petite Bannière</a></li>
-      <li><a href="../molecules/grande_banniere.html">Grande bannière</a></li>
-      <li><a href="../molecules/cities_list.html">Liste des villes</a></li>
-      <li><a href="../molecules/comment_show.html">Section commentaire</a></li>
-      <li><a href="../molecules/events_list.html">Index des Evenements</a></li>
-      <li><a href="../molecules/participants_list.html">Liste des participants</a></li>
-      <li><a href="../molecules/profile_show.html">Profil utilisateur</a></li>
-      <li><a href="../molecules/show.html">Affichage d'un evenement</a></li>
-      <li><a href="../molecules/payment_show.html">Page de paiement</a></li>
-      <li><a href="../molecules/foot.html">Footer</a></li>
-      <li><a href="../molecules/connexion.html">Connexion</a></li>
-      <li><a href="../molecules/changmdp.html">Formulaire de Changement de Mot de Passe</a></li>
+      <li><a href="./molecules/nav.html">Navbar</a></li>
+      <li><a href="./molecules/navconnected.html">Navbar connecté</a></li>
+      <li><a href="./molecules/inscription.html">Inscription</a></li>
+      <li><a href="./molecules/petite_banniere">Petite Bannière</a></li>
+      <li><a href="./molecules/grande_banniere.html">Grande bannière</a></li>
+      <li><a href="./molecules/cities_list.html">Liste des villes</a></li>
+      <li><a href="./molecules/comment_show.html">Section commentaire</a></li>
+      <li><a href="./molecules/events_list.html">Index des Evenements</a></li>
+      <li><a href="./molecules/participants_list.html">Liste des participants</a></li>
+      <li><a href="./molecules/profile_show.html">Profil utilisateur</a></li>
+      <li><a href="./molecules/show.html">Affichage d'un evenement</a></li>
+      <li><a href="./molecules/payment_show.html">Page de paiement</a></li>
+      <li><a href="./molecules/foot.html">Footer</a></li>
+      <li><a href="./molecules/connexion.html">Connexion</a></li>
+      <li><a href="./molecules/changmdp.html">Formulaire de Changement de Mot de Passe</a></li>
     </ul>
 
 
