--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Bootswatch: Minty</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../bootstrap.min.css">
-    <link rel="stylesheet" href="../_bootswatch.scss">
-    <link rel="stylesheet" href="../_variables.scss">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="_bootswatch.scss">
+    <link rel="stylesheet" href="_variables.scss">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23019901-1"></script>
@@ -34,7 +34,8 @@
       <li><a href="./molecules/participants_list.html">Liste des participants</a></li>
       <li><a href="./molecules/profile_show.html">Profil utilisateur</a></li>
       <li><a href="./molecules/show.html">Affichage d'un evenement</a></li>
-      <li><a href="./molecules/payment_show.html">Page de paiement</a></li>
+      <li><a href="./molecules/items_presentation.html">Présentation</a></li>
+      <li><a href="./molecules/payment_page.html">Page de paiement</a></li>
       <li><a href="./molecules/foot.html">Footer</a></li>
       <li><a href="./molecules/connexion.html">Connexion</a></li>
       <li><a href="./molecules/changmdp.html">Formulaire de Changement de Mot de Passe</a></li>
