--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li><a href="./molecules/nav.html">Navbar</a></li>
       <li><a href="./molecules/navconnected.html">Navbar connecté</a></li>
       <li><a href="./molecules/inscription.html">Inscription</a></li>
-      <li><a href="./molecules/petite_banniere">Petite Bannière</a></li>
+      <li><a href="./molecules/petite_banniere.html">Petite Bannière</a></li>
       <li><a href="./molecules/grande_banniere.html">Grande bannière</a></li>
       <li><a href="./molecules/cities_list.html">Liste des villes</a></li>
       <li><a href="./molecules/comment_show.html">Section commentaire</a></li>
