--- a/molecules/events_list.html
+++ b/molecules/events_list.html
@@ -150,5 +150,7 @@
   <script src="../_vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../_vendor/prismjs/prism.js" data-manual></script>
   <script src="../_assets/js/custom.js"></script>
+
+<a href="../index.html">Retour à l'index</a>
 </body>
 </html>
