--- a/molecules/payment_page.html
+++ b/molecules/payment_page.html
@@ -90,7 +90,7 @@
       
     </div>
 
-    
+    <a href="../index.html">Retour à l'index</a>
 
     <script src="../_vendor/jquery/dist/jquery.min.js"></script>
     <script src="../_vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
