--- a/molecules/petite_banniere.html
+++ b/molecules/petite_banniere.html
@@ -10,8 +10,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap.min.css" />
     <title>Bannière</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../bootstrap.css" type="text/css"/>
+  <link rel="stylesheet" href="../_vendor/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../_vendor/prismjs/themes/prism-okaidia.css">
+  <link rel="stylesheet" href="../_assets/css/custom.min.css">
 
   <body>
 
@@ -54,12 +58,13 @@
 
 
     <div style="width:100%;height:400px;">
-      <img src="j1.jpg" alt="m1" style="float:left;width:100%;height:90%;object-fit:cover;">
+      <img src="../img/j1.jpg" alt="m1" style="float:left;width:100%;height:90%;object-fit:cover;">
     </div>
 
             
     <h10 class="display-2 font-size-48 text-black mb-0">Qui sommes-nous ?</h10>
 
+<a href="../index.html">Retour à l'index</a>
 
 </body>
 </html>
