--- a/molecules/presentation_page.html
+++ b/molecules/presentation_page.html
@@ -3,8 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>prez</title>
-
-		<link rel="stylesheet" href="bootstrap.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../bootstrap.css" type="text/css"/>
+  <link rel="stylesheet" href="../_vendor/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../_vendor/prismjs/themes/prism-okaidia.css">
+  <link rel="stylesheet" href="../_assets/css/custom.min.css">
 		<script src="https://kit.fontawesome.com/c5dc84419b.js" crossorigin="anonymous"></script>
 
 		<!-- Global Site Tag (gtag.js) - Google Analytics -->
@@ -81,6 +84,7 @@ gtag('config', 'UA-23019901-1');
 				</div>
 		</section>
 
+<a href="../index.html">Retour à l'index</a>
 	</body>
 </html>
 
