--- a/molecules/show.html
+++ b/molecules/show.html
@@ -34,7 +34,7 @@
     </div>
       <div class="container">
       <div class="row">
-      <img src="/img/placeholder.jpeg" class="d-block user-select-none img-header"></img>
+      <img src="/img/placeholder.jpg" class="d-block user-select-none img-header"></img>
       <div class="col-lg-8">
       <div class="card-body">
         <h3 class="card-text text-center">Event title</h3>
@@ -54,7 +54,7 @@
       </div>
       <hr>
         <div class="card-body author">
-        <img src="../img/placeholder.jpeg" alt="avatar" class="img-thumbnail d-block user-select-none"></img>
+        <img src="../img/placeholder.jpg" alt="avatar" class="img-thumbnail d-block user-select-none"></img>
         <h4 class="card-text pt-3">username</h4>
         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce rutrum venenatis risus non tincidunt. Praesent sed euismod dolor. Cras cursus faucibus maximus. Suspendisse dictum orci ex, nec interdum nibh finibus eu. Donec volutpat enim non purus scelerisque feugiat. Ut tristique purus libero, vitae bibendum ante rhoncus eget.</p>
       </div>
