--- a/molecules/connexion.html
+++ b/molecules/connexion.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap.min.css" />
-    <title>Connexion</title>
-  </head>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta
+  name="viewport"
+  content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  <!-- Bootstrap CSS -->
+  <title>Connexion</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../bootstrap.css" type="text/css"/>
+  <link rel="stylesheet" href="../_vendor/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../_vendor/prismjs/themes/prism-okaidia.css">
+  <link rel="stylesheet" href="../_assets/css/custom.min.css">
+</head>
 
-  <body>
-    <div class="container h-100">
-      <div class="row h-100 justify-content-center align-items-center">
-        <div class="col-10 col-md-8 col-lg-6">
-          <!-- Form -->
-          <form class="form-example" action="" method="post">
-            <h1>Connexion</h1>
-            <!-- Input fields -->
-            <div class="form-group mt-4">
-              <label for="username">Adresse mail </label>
-              <input
-                type="text"
-                class="form-control username"
-                id="username"
-                placeholder="Entrer l'adresse mail"
-                name="username"
-              />
-            </div>
-            <div class="form-group mt-4">
-              <label for="password">Mot de passe</label>
-              <input
-                type="password"
-                class="form-control password"
-                id="password"
-                placeholder="Entrer mot de passe"
-                name="password"
-              />
-            </div>
+<body>
+  <div class="container h-100">
+    <div class="row h-100 justify-content-center align-items-center">
+      <div class="col-10 col-md-8 col-lg-6">
+        <!-- Form -->
+        <form class="form-example" action="" method="post">
+          <h1>Connexion</h1>
+          <!-- Input fields -->
+          <div class="form-group mt-4">
+            <label for="username">Adresse mail </label>
+            <input
+            type="text"
+            class="form-control username"
+            id="username"
+            placeholder="Entrer l'adresse mail"
+            name="username"
+            />
+          </div>
+          <div class="form-group mt-4">
+            <label for="password">Mot de passe</label>
+            <input
+            type="password"
+            class="form-control password"
+            id="password"
+            placeholder="Entrer mot de passe"
+            name="password"
+            />
+          </div>
 
-            <button type="submit" class="btn btn-primary btn-customized mt-3">
-              Connexion
-            </button>
-          </form>
-          <!-- Form end -->
-        </div>
+          <button type="submit" class="btn btn-primary btn-customized mt-3">
+            Connexion
+          </button>
+        </form>
+        <!-- Form end -->
       </div>
     </div>
-  </body>
+  </div>
+  <a href="../index.html">Retour à l'index</a>
+</body>
 </html>
