--- a/molecules/participants_list.html
+++ b/molecules/participants_list.html
@@ -114,6 +114,7 @@
 
   </main>
 
+<a href="../index.html">Retour à l'index</a>
 
   <script src="../_vendor/jquery/dist/jquery.min.js"></script>
   <script src="../_vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
