--- a/molecules/profile_show.html
+++ b/molecules/profile_show.html
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="card-body">
-            <img src="../img/placeholder.jpeg" alt="avatar" class="avatar d-block user-select-none"></img>
+            <img src="../img/placeholder.jpg" alt="avatar" class="avatar d-block user-select-none"></img>
             <hr>
           <h5 class="card-text">first name:</h5>
           <h5 class="card-text">last name:</h5>
