--- a/molecules/show.html
+++ b/molecules/show.html
@@ -34,7 +34,7 @@
     </div>
       <div class="container">
       <div class="row">
-      <img src="/img/placeholder.jpg" class="d-block user-select-none img-header"></img>
+      <img src="../img/placeholder.jpg" class="d-block user-select-none img-header"></img>
       <div class="col-lg-8">
       <div class="card-body">
         <h3 class="card-text text-center">Event title</h3>
